saving sample df to .csv.gz

--- a/sample_EDA_2000-2001.ipynb
+++ b/sample_EDA_2000-2001.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 129,
-   "id": "c0b36f64",
+   "id": "9c7c1b67",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   {
    "cell_type": "code",
    "execution_count": 201,
-   "id": "10ce7321",
+   "id": "132d5f78",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7c2c9f78",
+   "id": "56f01b84",
    "metadata": {},
    "source": [
     "# Loading in our Data"
@@ -34,7 +34,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "e7af43be",
+   "id": "b4ca7ed3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5f6eca69",
+   "id": "70f6cb6b",
    "metadata": {},
    "source": [
     "## Concatenating our Data frames"
@@ -53,7 +53,7 @@
   {
    "cell_type": "code",
    "execution_count": 44,
-   "id": "51a506a6",
+   "id": "69fbe93f",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "bcd369d7",
+   "id": "3bed6b2c",
    "metadata": {},
    "outputs": [
     {
@@ -85,7 +85,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "f0bea8f8",
+   "id": "57544886",
    "metadata": {},
    "outputs": [
     {
@@ -322,7 +322,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "81511035",
+   "id": "0643b967",
    "metadata": {},
    "source": [
     "# Movies with financial data"
@@ -331,7 +331,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "8ff81d58",
+   "id": "44ae9895",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -342,7 +342,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "2ab85f39",
+   "id": "4cddfa6c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -352,7 +352,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "83344035",
+   "id": "6f8cbacd",
    "metadata": {},
    "outputs": [
     {
@@ -369,7 +369,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e945908f",
+   "id": "4aeab316",
    "metadata": {},
    "source": [
     "# Movies per Category"
@@ -378,7 +378,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "01220bd5",
+   "id": "905701e4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -388,7 +388,7 @@
   {
    "cell_type": "code",
    "execution_count": 86,
-   "id": "db250349",
+   "id": "06043bf1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -398,7 +398,7 @@
   {
    "cell_type": "code",
    "execution_count": 89,
-   "id": "9edfbe66",
+   "id": "3e6b675e",
    "metadata": {},
    "outputs": [
     {
@@ -423,7 +423,7 @@
   {
    "cell_type": "code",
    "execution_count": 202,
-   "id": "f48278d9",
+   "id": "018b1829",
    "metadata": {},
    "outputs": [
     {
@@ -443,7 +443,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8bf1c190",
+   "id": "dff43e49",
    "metadata": {},
    "source": [
     "# Average Revenue per Certification"
@@ -452,7 +452,7 @@
   {
    "cell_type": "code",
    "execution_count": 125,
-   "id": "1c7b66cd",
+   "id": "7add3d58",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -462,7 +462,7 @@
   {
    "cell_type": "code",
    "execution_count": 215,
-   "id": "8a11cb5f",
+   "id": "820ac036",
    "metadata": {},
    "outputs": [
     {
@@ -495,7 +495,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "88542ad1",
+   "id": "3a5b8efd",
    "metadata": {},
    "source": [
     "# Average Budget per Certification"
@@ -504,7 +504,7 @@
   {
    "cell_type": "code",
    "execution_count": 172,
-   "id": "4fb0e9ad",
+   "id": "4136a975",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -514,7 +514,7 @@
   {
    "cell_type": "code",
    "execution_count": 214,
-   "id": "635ed402",
+   "id": "58670cf8",
    "metadata": {},
    "outputs": [
     {
@@ -547,7 +547,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f5d9b81f",
+   "id": "c2d8548a",
    "metadata": {},
    "source": [
     "# Deliverables"
@@ -555,13 +555,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "a20e3b83",
+   "execution_count": 219,
+   "id": "81a81c18",
    "metadata": {},
    "outputs": [],
    "source": [
-    "final_df.to_csv(\"Data/\")"
+    "final_df.to_csv(\"Data/tmdb_results_combined_2000-2001.csv.gz\", compression=\"gzip\", index=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "beb28bc4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
