Adding first Hypothesis Test

--- a/transformations_2000-2001.ipynb
+++ b/transformations_2000-2001.ipynb
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "9965b78e",
    "metadata": {},
    "outputs": [
@@ -47,20 +47,20 @@
        "dict_keys(['sql_key'])"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "with open(\"c:/Users/oscar/.secret/sql_key.json\", \"r\") as f:\n",
+    "with open(\"/Users/oscarochoa/Documents/.secret/sql_key.json\", \"r\") as f:\n",
     "    login = json.load(f)\n",
     "login.keys()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "cbb70233",
    "metadata": {},
    "outputs": [],
@@ -70,7 +70,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "1333a8b0",
    "metadata": {},
    "outputs": [
@@ -80,7 +80,7 @@
        "Engine(mysql+pymysql://root:***@localhost/movie_db)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "0f35d487",
    "metadata": {},
    "outputs": [],
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "e07ffeb3",
    "metadata": {},
    "outputs": [
@@ -112,7 +112,7 @@
        "True"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -131,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "16dae586",
    "metadata": {},
    "outputs": [
@@ -261,7 +261,7 @@
        "4              74   Horror,Music,Thriller   horror,music,thriller  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -280,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "5ea9366c",
    "metadata": {},
    "outputs": [
@@ -290,7 +290,7 @@
        "'Comedy,Fantasy,Romance'"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -302,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "id": "461bd557",
    "metadata": {},
    "outputs": [
@@ -445,7 +445,7 @@
        "4   [Horror, Music, Thriller]  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -465,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "1b80e915",
    "metadata": {},
    "outputs": [
@@ -719,7 +719,7 @@
        "[150813 rows x 11 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -739,7 +739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "id": "ece418d0",
    "metadata": {},
    "outputs": [
@@ -774,7 +774,7 @@
        " 'Western']"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -794,7 +794,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "id": "3983217d",
    "metadata": {},
    "outputs": [
@@ -862,7 +862,7 @@
        "2  tt0069049        Drama"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -874,7 +874,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "id": "cb394e40",
    "metadata": {},
    "outputs": [
@@ -909,7 +909,7 @@
        " 'Western': 25}"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -930,7 +930,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "id": "90093ac3",
    "metadata": {},
    "outputs": [],
@@ -940,7 +940,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "id": "7f5766ab",
    "metadata": {},
    "outputs": [],
@@ -950,7 +950,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "id": "cf8d14c9",
    "metadata": {},
    "outputs": [
@@ -1018,7 +1018,7 @@
        "2  tt0069049         7"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1037,7 +1037,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "id": "c81b9b72",
    "metadata": {},
    "outputs": [],
@@ -1048,7 +1048,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "id": "8af455c7",
    "metadata": {},
    "outputs": [
@@ -1242,7 +1242,7 @@
        "25     Western        25"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1261,7 +1261,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "id": "62b9006a",
    "metadata": {},
    "outputs": [],
@@ -1272,7 +1272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "id": "4cce68e7",
    "metadata": {},
    "outputs": [
@@ -1416,7 +1416,7 @@
        "[80810 rows x 4 columns]"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1435,7 +1435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "id": "9fb2b89c",
    "metadata": {},
    "outputs": [],
@@ -1453,7 +1453,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "id": "21c8699e",
    "metadata": {},
    "outputs": [],
@@ -1494,7 +1494,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 25,
    "id": "0ebed8fd",
    "metadata": {},
    "outputs": [
@@ -1508,7 +1508,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1519,7 +1519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "id": "32c2f819",
    "metadata": {},
    "outputs": [],
@@ -1530,7 +1530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "id": "a4893c55",
    "metadata": {},
    "outputs": [],
@@ -1541,7 +1541,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "id": "cd88def5",
    "metadata": {},
    "outputs": [
@@ -1554,7 +1554,7 @@
        " 'runtimeMinutes': Integer()}"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1565,7 +1565,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "id": "d0de10d1",
    "metadata": {},
    "outputs": [],
@@ -1575,17 +1575,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "id": "a6f07f99",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<sqlalchemy.engine.cursor.LegacyCursorResult at 0x1bf13c5fc08>"
+       "<sqlalchemy.engine.cursor.LegacyCursorResult at 0x7ff772b09410>"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1604,7 +1604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 31,
    "id": "4fd289df",
    "metadata": {},
    "outputs": [
@@ -1691,7 +1691,7 @@
        "4              74  "
       ]
      },
-     "execution_count": 54,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1714,7 +1714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 32,
    "id": "36b04e28",
    "metadata": {},
    "outputs": [],
@@ -1725,7 +1725,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 33,
    "id": "689f9a00",
    "metadata": {},
    "outputs": [
@@ -1735,7 +1735,7 @@
        "['tconst', 'averageRating', 'numVotes']"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1746,7 +1746,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 34,
    "id": "5d393dc0",
    "metadata": {},
    "outputs": [],
@@ -1757,7 +1757,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 35,
    "id": "0693fd52",
    "metadata": {},
    "outputs": [
@@ -1767,7 +1767,7 @@
        "{'tconst': String(length=11), 'averageRating': Float(), 'numVotes': Integer()}"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1778,7 +1778,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 36,
    "id": "f5946eca",
    "metadata": {},
    "outputs": [],
@@ -1788,17 +1788,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 37,
    "id": "e9debe84",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<sqlalchemy.engine.cursor.LegacyCursorResult at 0x1bf13c1b048>"
+       "<sqlalchemy.engine.cursor.LegacyCursorResult at 0x7ff7748ce410>"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1817,7 +1817,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 38,
    "id": "4e0156de",
    "metadata": {},
    "outputs": [
@@ -1891,7 +1891,7 @@
        "4  tt0000005            6.2      2475"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1914,7 +1914,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 39,
    "id": "a7e06cf5",
    "metadata": {},
    "outputs": [
@@ -1926,7 +1926,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1937,7 +1937,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 40,
    "id": "53712a1e",
    "metadata": {},
    "outputs": [
@@ -2005,7 +2005,7 @@
        "2  tt0069049         7"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2016,7 +2016,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 41,
    "id": "1655ac30",
    "metadata": {},
    "outputs": [],
@@ -2034,7 +2034,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 42,
    "id": "f1752289",
    "metadata": {},
    "outputs": [
@@ -2102,7 +2102,7 @@
        "4         7  tt0069049"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2125,7 +2125,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 43,
    "id": "bb96aff9",
    "metadata": {},
    "outputs": [
@@ -2137,7 +2137,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2148,7 +2148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 44,
    "id": "42e030f4",
    "metadata": {},
    "outputs": [
@@ -2216,7 +2216,7 @@
        "4  Biography         4"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2227,7 +2227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 45,
    "id": "c33ab5a2",
    "metadata": {},
    "outputs": [],
@@ -2245,7 +2245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 46,
    "id": "15a12ea3",
    "metadata": {},
    "outputs": [
@@ -2479,7 +2479,7 @@
        "[5 rows x 26 columns]"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2499,7 +2499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 47,
    "id": "1e5b8536",
    "metadata": {},
    "outputs": [],
@@ -2512,7 +2512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 48,
    "id": "26930334",
    "metadata": {},
    "outputs": [
@@ -2543,7 +2543,7 @@
        " 'vote_count']"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2554,7 +2554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 49,
    "id": "911ab201",
    "metadata": {},
    "outputs": [
@@ -2634,7 +2634,7 @@
        "4  tt0120755  125000000.0  546388105.0         PG-13"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2646,7 +2646,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 50,
    "id": "6fd07f46",
    "metadata": {},
    "outputs": [],
@@ -2657,7 +2657,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 51,
    "id": "36c59ce0",
    "metadata": {},
    "outputs": [
@@ -2667,7 +2667,7 @@
        "['imdb_id', 'budget', 'revenue', 'certification']"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2678,7 +2678,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 52,
    "id": "03c6a7c2",
    "metadata": {},
    "outputs": [
@@ -2691,7 +2691,7 @@
        " 'certification': Text(length=5)}"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2703,7 +2703,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 53,
    "id": "df804004",
    "metadata": {},
    "outputs": [],
@@ -2713,17 +2713,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 54,
    "id": "70cd11f8",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<sqlalchemy.engine.cursor.LegacyCursorResult at 0x1bf3372c108>"
+       "<sqlalchemy.engine.cursor.LegacyCursorResult at 0x7ff7350e0350>"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2742,7 +2742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 55,
    "id": "e5f4d5c3",
    "metadata": {},
    "outputs": [
@@ -2822,7 +2822,7 @@
        "4  tt0120630  45000000.0  224835000.0             G"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2845,7 +2845,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 56,
    "id": "83703768",
    "metadata": {},
    "outputs": [
@@ -2907,7 +2907,7 @@
        "4          tmdb_data"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
