adding visualization to final hypothesis

--- a/loading_2000-2022.ipynb
+++ b/loading_2000-2022.ipynb
@@ -881,7 +881,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "final_df.to_csv(\"Data/tmdb_results_combined_2000-2022\")"
+    "final_df.to_csv(\"Data/tmdb_results_combined_2000-2022.csv\")"
    ]
   },
   {
@@ -973,7 +973,7 @@
    ],
    "source": [
     "# checking if our file saved correctly\n",
-    "final_df = pd.read_csv(\"Data/tmdb_results_combined_2000-2022\", index_col=0)\n",
+    "final_df = pd.read_csv(\"Data/tmdb_results_combined_2000-2022.csv\", index_col=0)\n",
     "final_df.head()"
    ]
   },
